--- a/assets/style.css
+++ b/assets/style.css
@@ -1,85 +1,60 @@
 * {
     box-sizing: border-box;
-    
+    background-color: rgb(109, 0, 0);
 }
 
 body {
-    margin: 0;
+    margin: 100px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
 header {
-    display: flex;
-    flex-wrap: wrap;
     text-align: center;
-    justify-content: center;
     padding: 60px;
-    background: black;
-    color: white;
 }
 
 nav {
     display: flex;
-    background-color: black;
 }
 
 nav a {
-    color: red;
     padding: 14px 20px;
     text-decoration: none;
-    text-align: center;
+    color: black;
 }
 
 img {
     display: flex;
     flex-wrap: wrap;
-    width: 100px;
+    width: 100%;
+    padding: 50px;
     border-radius: 50px;
-    padding: 5px;
-}
-
-p {
-    display: flex;
 }
 
 .flexbox-container {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
-.flexbox-item-1 {
-    display: flex;
-    height: 200px;
-    margin: 10px;
-    width: 100%;
-    border: 1px solid black;
+.sticker-big {
+    border: solid 1px black;
+    flex: 0 0 100%;
+    box-shadow: 10px 10px 5px black;
+    margin: 20px;
 }
 
-.flexbox-item-2 {
-    display: flex;
-    height: 25%;
-    margin: 10px;
-    width: 48%;
-    border: 1px solid black;
-}
-
-.flexbox-container-2 {
-    display: flex;
-    flex-direction: row;
-    border: 1px solid black;
-    margin: 10px;
-}
-
-.flexbox-item-3 {
-    display: flex;
-    flex-wrap: wrap;
+.sticker-small {
+    border: solid 1px black;
     padding: 10px;
-    justify-content: center;
+    flex: 0 0 45%;
+    box-shadow: 10px 10px 5px black;
+    margin: 20px;
+    text-align: center;
 }
 
 h1 {
     width: 100%;
-    color: red;
     text-align: center;
 }
 
@@ -91,10 +66,8 @@ h2 {
     padding: 3px;
 }
 
-p {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
+p, h4 {
+    text-align: center;
 }
 
 @media screen and (max-width: 992px) {
