--- a/assets/style.css
+++ b/assets/style.css
@@ -10,7 +10,7 @@ body {
 
 header {
     text-align: center;
-    padding: 60px;
+    padding: 30px;
 }
 
 nav {
@@ -18,7 +18,7 @@ nav {
 }
 
 nav a {
-    padding: 14px 20px;
+    padding: 16px 24px;
     text-decoration: none;
     color: black;
 }
@@ -54,19 +54,23 @@ img {
 }
 
 h1 {
+    font-size: 50px;
     width: 100%;
     text-align: center;
 }
 
 h2 {
+    font-size: 25px;
     display: flex;
     text-align: center;
     align-items: center;
     justify-content: center;
-    padding: 3px;
+    padding: 10px;
+    margin: 20px 0px 0px;
 }
 
 p, h4 {
+    font-size: 20px;
     text-align: center;
 }
 
