--- a/assets/style.css
+++ b/assets/style.css
@@ -26,18 +26,29 @@ nav a {
 img {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     width: 100%;
-    padding: 50px;
-    border-radius: 50px;
+    padding: 75px;
+}
+
+.headshot {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 50%;
 }
 
 .flexbox-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    align-items: center;
 }
 
 .sticker-big {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     border: solid 1px black;
     flex: 0 0 100%;
     box-shadow: 10px 10px 5px black;
@@ -50,7 +61,6 @@ img {
     flex: 0 0 45%;
     box-shadow: 10px 10px 5px black;
     margin: 20px;
-    text-align: center;
 }
 
 h1 {
@@ -62,16 +72,20 @@ h1 {
 h2 {
     font-size: 25px;
     display: flex;
-    text-align: center;
-    align-items: center;
     justify-content: center;
     padding: 10px;
     margin: 20px 0px 0px;
 }
 
-p, h4 {
+h3  {
+    font-size: 25px;
+    text-align: center;
+}
+
+p {
     font-size: 20px;
     text-align: center;
+    padding: 50px;
 }
 
 @media screen and (max-width: 992px) {
