--- a/assets/style.css
+++ b/assets/style.css
@@ -1,101 +1,9 @@
-* {
-    box-sizing: border-box;
-    background-color: rgb(109, 0, 0);
-}
 
-body {
-    margin: 100px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
-}
-
-header {
+h1, h2, h3, h5, p {
     text-align: center;
-    padding: 30px;
-}
-
-nav {
-    display: flex;
-}
-
-nav a {
-    padding: 16px 24px;
-    text-decoration: none;
-    color: black;
 }
 
 img {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 100%;
-    padding: 75px;
-}
-
-.headshot {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 50%;
-}
-
-.flexbox-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.sticker-big {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    border: solid 1px black;
-    flex: 0 0 100%;
-    box-shadow: 10px 10px 5px black;
-    margin: 20px;
-}
-
-.sticker-small {
-    border: solid 1px black;
-    padding: 10px;
-    flex: 0 0 45%;
-    box-shadow: 10px 10px 5px black;
-    margin: 20px;
-}
-
-h1 {
-    font-size: 50px;
-    width: 100%;
-    text-align: center;
-}
-
-h2 {
-    font-size: 25px;
-    display: flex;
-    justify-content: center;
-    padding: 10px;
-    margin: 20px 0px 0px;
-}
-
-h3  {
-    font-size: 25px;
-    text-align: center;
-}
-
-p {
-    font-size: 20px;
-    text-align: center;
-    padding: 50px;
-}
-
-@media screen and (max-width: 992px) {
-    .flexbox-container {
-        width: 100%;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .flexbox-container {
-        width: 100%;
-    }
+    height: 10%;
+    width: 10%;
 }
