--- a/assets/style.css
+++ b/assets/style.css
@@ -1,9 +1,28 @@
+.myheader {
+    font-family: Arial, Helvetica, sans-serif;
+}
 
-h1, h2, h3, h5, p {
+.pictures {
+    width: 80%;
+    margin: auto;
+}
+
+main {
+    padding: 1%
+}
+
+h1, h2 {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: underline;
+    text-shadow: 2px 2px 5px gray;
+}
+
+h3, h5, p {
     text-align: center;
 }
 
-img {
+/* img {
     height: 10%;
     width: 10%;
-}
+} */
